data/derived/sp14/progs/unify/prog4117.ml.out
Characters 29-31:
  let fixpoint (f,b) = wwhile ((),b);;
                               ^^
Error: This expression has type unit but an expression was expected of type
         'a -> 'a * bool
